bug fix: web contents visibility collapse while chatbot open

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -129,10 +129,10 @@
   .chat-window-toggle {
     margin-bottom: 55px ;
     bottom: 55px ;
-    z-index: 0;
+    z-index: 99;
   }
   .chat-window-wrapper{
-    z-index: 0;
+    z-index: 99;
   }
 }
 
